exports[`client > reducers > organization should handle add organization 1`] = `
Object {
  "organizations": Array [
    Object {
      "id": 1,
    },
  ],
  "organizationsById": Object {
    "1": Object {
      "id": 1,
    },
  },
}
`;

exports[`client > reducers > organization should handle add site 1`] = `
Object {
  "organizations": Array [
    Object {
      "analyses": Array [],
      "analysesById": Object {},
      "contact": "someone",
      "email": "abc@def.ghi",
      "groups": Array [],
      "groupsById": Object {},
      "id": "1",
      "logo_url": "https://placekitten.com/80/80",
      "main_url": "https://placekitten.com/",
      "name": "Mock Organization",
      "sites": Array [
        Object {
          "address": "123 ABC St",
          "id": "1",
          "name": "Acme Corp",
          "organizationId": "1",
        },
      ],
      "sitesById": Object {
        "1": Object {
          "address": "123 ABC St",
          "id": "1",
          "name": "Acme Corp",
          "organizationId": "1",
        },
      },
    },
  ],
  "organizationsById": Object {
    "1": Object {
      "analyses": Array [],
      "analysesById": Object {},
      "contact": "someone",
      "email": "abc@def.ghi",
      "groups": Array [],
      "groupsById": Object {},
      "id": "1",
      "logo_url": "https://placekitten.com/80/80",
      "main_url": "https://placekitten.com/",
      "name": "Mock Organization",
      "sites": Array [
        Object {
          "address": "123 ABC St",
          "id": "1",
          "name": "Acme Corp",
          "organizationId": "1",
        },
      ],
      "sitesById": Object {
        "1": Object {
          "address": "123 ABC St",
          "id": "1",
          "name": "Acme Corp",
          "organizationId": "1",
        },
      },
    },
  },
}
`;

exports[`client > reducers > organization should handle default state 1`] = `
Object {
  "organizations": Array [],
  "organizationsById": Object {},
}
`;

exports[`client > reducers > organization should handle set organizations 1`] = `
Object {
  "organizations": Array [
    Array [
      Object {
        "id": 1,
      },
    ],
  ],
  "organizationsById": Object {
    "1": Object {
      "id": 1,
    },
  },
}
`;
